# shelter_map

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  constraints.txt  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
shelter_map/: common.py  convert.py  download.py
shelter_map/by_city/: __init__.py  jerusalem.py  tel_aviv.py
